# Wabot_trekker

./: .amptrc  .dockerignore  .env  .gitignore  .replit  .yarnrc.yml  DEPLOYMENT.md  Dockerfile  README.md  SETUP_COMPLETE.md  WHATSAPP_BOT_COMMANDS.md  activity-log.txt  commands  data  ecosystem.config.js  lib  package-lock.json  package.json  pyproject.toml  replit.md  server.js  settings.js  start.sh
.ampt/: last-dependency-check  logs  package-updates-available.json
.choreo/: component.yaml
.emergent/: emergent.yml
.github/workflows/: Admin.yml  Auto commit  Auto commit.yml  main.yml
attached_assets/: Pasted-2026-01-20T21-15-59-466865460Z-yarn-run-v1-22-22-2026-0_1768943816436.txt  Pasted-Copying-blob-sha256-905294f05a3d6aeed9e20726af6bb39eb3d_1768939287620.txt
backend/: database.sqlite  instances.json  package.json  requirements.txt  server.js  server.py  server_old.py
backend/static/: asset-manifest.json  dashboard.html  index.html
bot/: PORT_ALLOCATION_KIT.md  baileys_store.json  bridge_test.js  globalpair.js  index.js  index.js.bak  instance.js  instance_nostatus.js  instance_status.js  main.js  pairingserver.js  settings.js  status-worker.js
bot/commands/: alive.js  altserver.js  antidelete.js  antilink.js  autoread.js  autostatus.js  autotyping.js  battery.js  bio.js  block.js  botmanagement.js  botoff.js  chatbot.js  chatbotdb.js  chatops.js  clearsession.js  delbot.js  follow.js  fun.js  github.js  help.js  igs.js  (+22 more)
frontend/: package-lock.json  package.json  tailwind.config.js
public/: index.html
scripts/: stop_all.js
session/: creds.json
(+9705 files in other folders)
