[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.12.0",
    "asyncpg>=0.31.0",
    "certifi>=2025.11.12",
    "click>=8.3.1",
    "dnspython>=2.8.0",
    "fastapi>=0.128.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "starlette>=0.50.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.40.0",
]
